@@ -1,3 +1,7 @@
+2003-07-20	ujwal
+
+    * Put back in bold face support for fonts that support it.
+
 2003-07-18	ujwal
 
     * Re-implemented eraseInDisplay code to save screen contents to scrollback buffer. 
